fixed Samsung RIL (moved to telephony-common)

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1142,4 +1142,6 @@
         <item>com.android.inputmethod.latin</item>
     </string-array>
 
+    <!-- Boolean to enable stk functionality on Samsung phones -->
+    <bool name="config_samsung_stk">false</bool>
 </resources>
